--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
       </div>
 
   </main>
-
-  <!-- MI JS -->
+  <!-- MI Scripts -->
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/validacion.js"></script>
 
